# bib-client-2024_1

./: Cargo.toml  README.md  adm-client.sh  bib-client.sh  build.rs  cadastro_inicial.sh  emprestimos.sh  out_cadastro_inicial.txt  out_emprestimos.txt
.github/workflows/: rust.yml
proto/: biblioteca.proto  cadastro.proto
src/: adm-client.rs  bib-client.rs
