[package]
name = "bib-client"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the gRPC adm client
name = "adm-client"
path = "src/adm-client.rs"

[[bin]] # Bin to run the gRPC bib client
name = "bib-client"
path = "src/bib-client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
clap = { version = "4.5.7", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
